2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'config.pl'.
	* Added 'decant.pl'.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Completed 'decant.pl'.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Completed 'distill.pl'.
2016-01-23 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '$config_firmware_root' parameter in 'config.pl'.
2016-01-23 Fred Gleason <fredg@paravelsystems.com>
	* Added a sample configuration in 'conf/imageforge_conf-sample.pl'.
2017-09-11 Fred Gleason <fredg@paravelsystems.com>
	* Added calls to sync(8) and sleep(1) in the 'AppendFilesystem()'
	function of 'distill.pl'.
2024-07-24 Fred Gleason <fredg@paravelsystems.com>
	* Modified scripts to work correctly with Perl 5.
2024-07-24 Fred Gleason <fredg@paravelsystems.com>
	* Fixed output of the usage hint in 'decant.pl'.
	* Fixed output of the '--list-roots' switch in 'distill.pl'.
2024-07-26 Fred Gleason <fredg@paravelsystems.com>
	* More print formatting fixes in 'distill.pl' and 'decant.pl'.